# RubiksCubeSolver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  RubiksCube.cpp  RubiksCube.h  RubiksCube1DArray.cpp  RubiksCube3DArray.cpp  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
